# sound-and-music-portfolio

./: README.md  notebook.md
code/SynthSynth/: README.md  package-lock.json  package.json
code/SynthSynth/src/: App.css  App.tsx  config.ts
code/SynthSynth/src/midi/: MIDIEvent.test.ts  MIDIEvent.ts
code/adaptive-tone-control/: README.md  package-lock.json  package.json  postcss.config.js  requirements.txt  tailwind.config.ts
code/adaptive-tone-control/.svelte-kit/: ambient.d.ts
code/adaptive-tone-control/basic_python/: README.md
code/adaptive-tone-control/basic_python/src/: energy_analysis.py  (+3 more)
code/adaptive-tone-control/src/: app.css  energy_analysis.py  fft_utils.py  main.py  test_energy_analysis.py  test_fft_utils.py  visualization.py  waveform_utils.py
code/adaptive-tone-control/webapp/: package.json  svelte.config.js
code/clipped/: README.md  clipped.py
code/fft/: fft.py  requirements.txt
code/interpolator/: .gitignore  .pylintrc  README.md  instructions.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_instructions.json
code/interpolator/demo_sounds/: vowels.m4a
code/interpolator/examples/: instructions.json
code/interpolator/src/: main.py
code/interpolator/src/interpolator/: audio_data.py  formants.py  interpolate_signals.py  pitch.py
code/interpolator/tests/interpolator/: test_pitch.py
code/popgen/: README.md  parsing.py  popgen.py
notes/: notes-10-03.ipynb  notes-10-08.ipynb  notes-10-22.ipynb  notes-10-29.ipynb  notes-11-26.md  requirements.txt
notes/mouth-sim-idea-notes/: final-project-idea-mouth-sim.ipynb
(+16 files in other folders)
